Fix padding/overflow

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -492,4 +492,12 @@ table.parameters .row-odd {
   display: block;
 }
 
+div.endpoint-list div.panel-heading {
+  padding: 0;
+}
+
+div.endpoint-list div.panel-body .container {
+  width: auto;
+}
+
 /*********************FOR BOOTSTRAP INTERACTIONS************************/
